--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hume-evi-next-js-app-router",
+  "name": "peakform",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/humeai/hume-evi-next-js-starter",
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@humeai/voice-react": "^0.1.20",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@types/echarts": "^4.9.22",
     "@types/react-virtualized": "^9.21.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
     "hume": "^0.9.18",
