--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-virtualized": "^9.21.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^11.2.10",
