--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "peakform",
+  "name": "peak",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/humeai/hume-evi-next-js-starter",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@humeai/voice-react": "^0.1.20",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
@@ -27,6 +28,7 @@
     "hume": "^0.9.18",
     "lucide-react": "^0.394.0",
     "next": "^14.2.28",
+    "prisma": "^6.7.0",
     "react": "^18",
     "react-dom": "^18",
     "react-virtualized": "^9.22.5",
@@ -37,14 +39,20 @@
     "ts-pattern": "^5.1.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.32",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.3.1",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.8.1",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
